Reference UI Design

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!-- Website Development By Michael Tanaya -->
+<!-- Follow Me At Instagram : fxen_ -->
+<!-- UI Design Reference : 
+  https://dribbble.com/shots/19629405-Calamity-Creative-Design-Agency-Landing-Page 
+-->
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
